# circuitring

./: .gitignore  README.md  pyproject.toml
src/circuitring/: __init__.py  core.py
tests/: test_circuit.py
