[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitring"
version = "0.1.0"
description = "Tiny circuit breaker for Python. Sync + async. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "WCN Development Co" }]
keywords = ["circuit-breaker", "resilience", "fault-tolerance", "failover", "decorator", "async", "infrastructure"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/WCN-DEV-CO/circuitring"
Source = "https://github.com/WCN-DEV-CO/circuitring"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
